--- a/src/api/package.json
+++ b/src/api/package.json
@@ -10,6 +10,7 @@
   "author": "vanloiidk@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
