--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
-    "mongodb": "^3.3.3"
+    "mongodb": "^3.3.3",
+    "mongoose": "^5.7.10"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
