--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "immutable": "^4.0.0-rc.12",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.3",
-    "mongoose": "^5.7.10"
+    "mongoose": "^5.7.10",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
