--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
     "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -48,10 +49,11 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0",
     "reactstrap": "^8.1.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
+    "sass-loader": "^7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
@@ -71,7 +73,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "eslint": "eslint"
+    "eslint": "eslint",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
