Fixing Left Navbav

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -37,6 +37,7 @@
             "error",
             "windows"
         ],
-        "react/prop-types": 0
+        "react/prop-types": 0,
+        "eslint-disable-next-line": 0,
     }
 }
