--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -37,7 +37,6 @@
             "error",
             "windows"
         ],
-        "react/prop-types": 0,
-        "eslint-disable-next-line": 0,
+        "react/prop-types": 0
     }
 }
