--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,16 +22,15 @@
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-react-app": "^5.0.2",
     "eslint-loader": "3.0.2",
     "eslint-plugin-flowtype": "3.13.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "rimraf": "^3.0.0",
     "file-loader": "3.0.1",
     "font-awesome": "^4.7.0",
     "fs-extra": "7.0.1",
@@ -61,12 +60,14 @@
     "reactstrap": "^8.1.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
+    "rimraf": "^3.0.0",
     "sass-loader": "^7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
+    "uuid": "^3.3.3",
     "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.1.1",
@@ -152,6 +153,5 @@
       "react-app"
     ]
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
