--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.4",
-    "mongoose": "^5.7.10"
+    "mongoose": "^5.7.10",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
