--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,8 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
@@ -56,7 +58,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.2.0",
+    "react-scripts": "^3.3.0",
     "reactstrap": "^8.1.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
@@ -64,7 +66,7 @@
     "sass-loader": "^7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
+    "terser-webpack-plugin": "^1.4.1",
     "ts-pnp": "1.1.4",
     "url-loader": "2.1.0",
     "uuid": "^3.3.3",
@@ -153,6 +155,5 @@
       "react-app"
     ]
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
