--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -30,6 +30,7 @@
                 ]
             }
         ],
+        "no-underscore-dangle": 0,
         "linebreak-style": 0,
         "global-require": 0,
         "eslint linebreak-style": [
