--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "resolve-url-loader": "3.1.0",
     "rimraf": "^3.0.0",
     "sass-loader": "^7.2.0",
+    "semantic-ui-react": "^0.88.2",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "^1.4.1",
