--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.15",
     "mongodb": "^3.3.4",
     "mongoose": "^5.7.10",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "validator": "^12.1.0"
   },
