--- a/backend/docs/apidoc/api_project.json
+++ b/backend/docs/apidoc/api_project.json
@@ -1,16 +1,18 @@
 {
-  "name": "Cooperatives Management system",
-  "version": "0.1.0",
-  "description": "apiDoc",
-  "title": "Custom apiDoc",
-  "url": "http://localhost:3001",
+  "name": "Cooperative management platform",
+  "version": "1.0.0",
+  "description": "CMP APIs documentation",
+  "title": "Cooperative management platform | APIs documentation",
+  "template": {
+    "forceLanguage": "en"
+  },
   "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2020-03-23T12:34:22.927Z",
+    "time": "2020-03-24T14:00:24.016Z",
     "url": "http://apidocjs.com",
-    "version": "0.18.0"
+    "version": "0.19.1"
   }
 }
