--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs": "npm run apidoc && npm run postdoc",
     "apidoc": "apidoc -e \"node_modules/\" -o docs/apidoc/",
-    "postdoc": "open-cli docs//apidoc/index.html"
+    "postdoc": "open-cli docs//apidoc/index.html",
+    "migrate_up": "./node_modules/.bin/migrate-mongo up --file ./config/migrate-mongo-config.js",
+    "migrate_down": "./node_modules/.bin/migrate-mongo down --file ./config/migrate-mongo-config.js"
   },
   "author": "vanloiidk@gmail.com",
   "license": "ISC",
@@ -47,6 +49,7 @@
     "apidoc": "^0.19.0",
     "gulp": "^4.0.2",
     "gulp-apidoc": "^0.2.8",
+    "migrate-mongo": "^7.1.0",
     "nodemon": "^1.19.4",
     "open-cli": "^6.0.0"
   }
