--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,1 +1,26 @@
+# documents
+docs/api
+
+# node modules
 node_modules
+dist
+
+# environment files
+.env
+
+# user uploaded files
+backend/images
+
+# cache file
+.cache
+
+# logging
+*.log
+logs/
+
+# test
+.nyc
+coverage
+
+# personal TODO
+TODO.md
