--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,18 @@ PORT=3001
 NODE_ENV=development
 MONGO_URL=mongodb://localhost:27017/farm
 DB_NAME=farm
+
+NODE_ENV=production
+
+PORT=3001
+
+DEV_HOST_NAME=http://localhost:3001
+
+SECRET_OR_PRIVATE_KEY=farm-api
+ACCESS_TOKEN_EXPIRATION_IN_MINUTE=60
+REFRESH_TOKEN_EXPIRATION_IN_HOUR=24
+
+DB_URI=mongodb://localhost:27017/farm-api
+DB_HOST=localhost
+DB_PORT=27017
+DB_NAME=farm
