--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "author": "vanloiidk@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -34,6 +35,7 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "express-validator": "^6.4.0",
     "helmet": "^3.21.3",
     "http-status": "^1.4.2",
     "immutable": "^4.0.0-rc.12",
