feature: create new diary, create new goodsreciepts, fix: api docs

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,8 @@
-NODE_ENV=development
+NODE_ENV=production
 
 PORT=3001
 
 DEV_HOST_NAME=http://localhost:3001
-PROD_HOST_NAME=http://seok.shop:8182
 
 SECRET_OR_PRIVATE_KEY=farm-api
 ACCESS_TOKEN_EXPIRATION_IN_MINUTE=60
