--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs": "npm run apidoc && npm run postdoc",
-    "apidoc": "apidoc -e \"node_modules/\" -o docs/apidoc/",
+    "apidoc": "apidoc -i ./routes ./router.js -e \"node_modules/\" -o docs/apidoc/",
     "postdoc": "open-cli docs//apidoc/index.html",
     "migrate_up": "./node_modules/.bin/migrate-mongo up --file ./config/migrate-mongo-config.js",
     "migrate_down": "./node_modules/.bin/migrate-mongo down --file ./config/migrate-mongo-config.js"
@@ -50,7 +50,7 @@
     "winston-daily-rotate-file": "^4.4.2"
   },
   "devDependencies": {
-    "apidoc": "^0.19.0",
+    "apidoc": "^0.19.1",
     "gulp": "^4.0.2",
     "gulp-apidoc": "^0.2.8",
     "migrate-mongo": "^7.1.0",
