re-configure docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,13 @@
 FROM node:lts-slim
 
-RUN mkdir -p /usr/src/app
+RUN mkdir -p /usr/src/htx/app
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/htx/app
 
 COPY package.json .
 
 RUN npm install
+
+RUN npm install -g nodemon
 
 COPY . .
